fixed hero.css add padding and overflow #hero {}

--- a/resources/sass/3-components/_hero.scss
+++ b/resources/sass/3-components/_hero.scss
@@ -1,4 +1,7 @@
 #hero {
+    padding: rem(70) 0;
+    overflow: hidden;
+
     img {
         width: 100%;
         height: rem(420);
